--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>VeggieBox</title>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/WcPdFvh/favicon.png">
   </head>
   <body>
     <div id="root"></div>
